src/test/resources/errors/array-assign-index.intp
val a = [2]
a["wrong"] = 13.3